WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181976
Re-arrange TypedArray JSTypes to match the order of the TypedArrayType enum list.
https://bugs.webkit.org/show_bug.cgi?id=181976
Summary
Re-arrange TypedArray JSTypes to match the order of the TypedArrayType enum l...
Mark Lam
Reported
2018-01-23 00:49:17 PST
This simplifies the code and makes it easier to map from one to the other.
Attachments
proposed patch.
(18.60 KB, patch)
2018-01-23 11:18 PST
,
Mark Lam
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-01-23 00:50:33 PST
<
rdar://problem/36766936
>
Mark Lam
Comment 2
2018-01-23 11:18:58 PST
Created
attachment 332043
[details]
proposed patch.
EWS Watchlist
Comment 3
2018-01-23 11:20:15 PST
Attachment 332043
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/TypedArrayType.h:59: Code inside a namespace should not be indented. [whitespace/indent] [4] WARNING: This machine could support 4 simulators, but is only configured for 3. WARNING: Please see <
https://trac.webkit.org/wiki/IncreasingKernelLimits
>. Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 4
2018-01-23 12:40:14 PST
Thanks for the review. Landed in
r227434
: <
http://trac.webkit.org/r227434
>.
Yusuke Suzuki
Comment 5
2018-01-23 23:04:12 PST
Committed
r227478
: <
https://trac.webkit.org/changeset/227478
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug