Source/JavaScriptCore/ftl/FTLOSRExit.cpp
@@ -118,3 +118,4 @@ CodeLocationJump OSRExit::codeLocationForRepatch(CodeBlock* ftlCodeBlock) const
 
 #endif // ENABLE(FTL_JIT)
 
+
